// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CodeBlock component > Render correctly without copy to clipboard button 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-16lsfnu-MuiPaper-root"
  >
    <code>
      {
  "test": "test"
}
    </code>
  </div>
</div>
`;

exports[`CodeBlock component > Renders correctly 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-16lsfnu-MuiPaper-root"
  >
    <div
      className="MuiBox-root css-1q9qc6z"
    >
      <button
        data-value="{
  \\"test\\": \\"test\\"
}"
        type="button"
      >
        Copy
      </button>
    </div>
    <code>
      {
  "test": "test"
}
    </code>
  </div>
</div>
`;
